--- a/package.json
+++ b/package.json
@@ -1,10 +1,30 @@
 {
+  "name": "jusgo-passenger-backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.3.4",
-    "nodemon": "^3.0.1"
-  }
+    "firebase-admin": "^11.10.1",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.4"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Button-20/JusGo-Passenger-Backend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Button-20/JusGo-Passenger-Backend/issues"
+  },
+  "homepage": "https://github.com/Button-20/JusGo-Passenger-Backend#readme"
 }
