--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "firebase-admin": "^11.10.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.4"
+    "mongoose": "^7.3.4",
+    "socket.io": "^4.7.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
