--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "node-cron": "^3.0.2",
+    "node-fetch": "^2.6.12",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
