--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^124.0.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "node-cron": "^3.0.2",
     "node-fetch": "^2.6.12",
+    "nodemailer": "^6.9.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
