--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cross-switch-gh": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^124.0.0",
